--- a/Views/SuperAdmin/Index.cshtml
+++ b/Views/SuperAdmin/Index.cshtml
@@ -96,7 +96,7 @@
         </div>
 
         <!-- Signup Form -->
-        <h1>Products going out of stock..</h1>
+        <h1>Products below reorder of stock..</h1>
 
 
         <div id="">
@@ -167,8 +167,8 @@
 
                             <td>
                                
-                                <a asp-action="Details"
-                               asp-route-Barcode="@item.Data.Barcode">Details</a>
+                                <a asp-controller="Product" asp-action="Details"
+                               asp-route-Barcode="@item.Data.Barcode">More</a>
 
                             </td>
                         </tr>
@@ -186,7 +186,7 @@
 
         <!-- search box  -->
         <div class="search-container">
-            <form asp-controller="Product" asp-action="GetById">
+            <form asp-controller="Product" asp-action="Details">
                 <input type="text" placeholder="Barcode..." name="barCode">
                 <button type="submit"><i class="fa fa-search"></i> Search
                 </button>
