--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -81,6 +81,12 @@
                                asp-controller="Home"
                                asp-action="Login">Login</a>
                         </li>
+                    
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Home"
+                               asp-action="Logout">Logout</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""
                                asp-controller="Customer"
