--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -455,6 +455,7 @@ h3 {
 .form-container {
     width: 76%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     height: auto;
     border: 2px solid rgb(255, 11, 129);
